--- a/amplify/backend/auth/easyreadse1a0bd99/easyreadse1a0bd99-cloudformation-template.yml
+++ b/amplify/backend/auth/easyreadse1a0bd99/easyreadse1a0bd99-cloudformation-template.yml
@@ -103,7 +103,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'easyre5627bf8e_sns-role', !Join ['',[ 'sns', '5627bf8e', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'easyree1a0bd99_sns-role', !Join ['',[ 'sns', 'e1a0bd99', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -115,10 +115,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: easyre5627bf8e_role_external_id
+                sts:ExternalId: easyree1a0bd99_role_external_id
       Policies: 
         - 
-          PolicyName: easyre5627bf8e-sns-policy
+          PolicyName: easyree1a0bd99-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -164,7 +164,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: easyre5627bf8e_role_external_id
+        ExternalId: easyree1a0bd99_role_external_id
     
   
   UserPoolClientWeb:
@@ -172,7 +172,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: easyre5627bf8e_app_clientWeb
+      ClientName: easyree1a0bd99_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -182,7 +182,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: easyre5627bf8e_app_client
+      ClientName: easyree1a0bd99_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -193,7 +193,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '5627bf8e', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'e1a0bd99', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -247,7 +247,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: easyre5627bf8e_userpoolclient_lambda_iam_policy
+      PolicyName: easyree1a0bd99_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -264,7 +264,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: easyre5627bf8e_userpoolclient_lambda_log_policy
+      PolicyName: easyree1a0bd99_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -304,7 +304,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'easyreads5627bf8e_identitypool_5627bf8e', !Join ['',['easyreads5627bf8e_identitypool_5627bf8e', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'easyreadse1a0bd99_identitypool_e1a0bd99', !Join ['',['easyreadse1a0bd99_identitypool_e1a0bd99', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
